# tqai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/homebrew/: tqai.rb
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  benchmark_bake.py  benchmark_forward.py  benchmark_kv_memory.py  benchmark_long_context.py  benchmark_metal.py  benchmark_pipeline.py  benchmark_v05.py  benchmark_video.py  benchmark_video_steps.py  eval_e2e.py  eval_perplexity.py
benchmarks/results/: FINDINGS.md  Qwen_Qwen2.5-0.5B-Instruct_bake_k4v2.json  Qwen_Qwen2.5-0.5B-Instruct_torch.json  Qwen_Qwen2.5-3B-Instruct_torch.json  kv_memory.json  long_context.json  long_context_7b.json  mlx-community_Llama-3.1-8B-Instruct-4bit_mlx.json  mlx-community_Qwen2.5-0.5B-Instruct-4bit_mlx.json  mlx-community_Qwen2.5-0.5B-Instruct-8bit_mlx.json  mlx-community_Qwen2.5-0.5B-Instruct-bf16_mlx.json  mlx-community_Qwen2.5-14B-Instruct-4bit_mlx.json  mlx-community_Qwen2.5-3B-Instruct-4bit_mlx.json  mlx-community_Qwen2.5-3B-Instruct-8bit_mlx.json  mlx-community_Qwen2.5-3B-Instruct-bf16_mlx.json  mlx-community_Qwen2.5-7B-Instruct-8bit_mlx.json  mlx-community_gemma-4-e4b-it-4bit_mlx.json  pipeline_benchmark.json  pipeline_benchmark_rotorquant.json  v05_benchmark.json  video_step_sweep.json
examples/: hf_example.py  mlx_example.py
integrations/lmcache/: README.md  pyproject.toml
integrations/lmcache/benchmarks/: bench_serde.py
integrations/lmcache/src/lmcache_turbo_quant_serde/: __init__.py  _codec.py  _register.py  _v1_codec.py  _wire.py
integrations/lmcache/tests/: test_codec.py  test_e2e.py  test_integration.py  test_wire.py
paper/: tqai_paper.md  tqai_paper.tex
reports/: benchmark_report.html  kv_memory_finding.md  paper_coverage_report.md  where_tqai_shines.md
scripts/: bench_mlx_compressed.py  bench_with_without_tqai.py  csa_hca_e2e.py  generate_codebooks.py
src/tqai/: __init__.py  __main__.py  _patch.py  attention.py  attention_fused.py  bake.py  cli.py  config.py  convert.py  csa_hca.py  (+6 more)
tests/: conftest.py  test_accuracy.py  test_adapters.py  test_backend.py  test_bake.py  test_cache_hf.py  test_cache_mlx.py  test_cfg_sharing.py  test_chunked_attention.py  test_cli.py  test_codebook.py  test_compressed_cache.py  test_convert.py  test_csa_hca.py  test_dit.py  test_e2e_large_models.py  test_e2e_models.py  test_fisher_calibration.py  test_fused_attention.py  test_hooks.py  test_hooks_mlx.py  test_metal_kernels.py  test_metal_rotor_kernels.py  test_module_utils.py  test_optimization.py  test_packing.py  test_paper_gaps.py  test_patch.py  test_pipeline.py  test_qjl.py  test_quantizer.py  test_rotor_quantizer.py  test_scorers.py  test_snr_scorer.py  test_sprint4.py  test_strategies.py  test_video_presets.py
(+72 files in other folders)
