[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tqai"
version = "0.1.0"
description = "TurboQuant KV cache compression for local LLM inference"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "pbertsch" }]
keywords = ["quantization", "llm", "kv-cache", "compression", "turboquant", "mlx", "apple-silicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
torch = ["torch>=2.1"]
cuda = ["torch>=2.1", "triton>=2.0"]
mlx = ["mlx>=0.14", "mlx-lm>=0.12"]
codegen = ["scipy>=1.10"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "transformers>=4.38",
    "torch>=2.1",
    "scipy>=1.10",
]

[project.scripts]
tqai = "tqai.cli:main"

[project.urls]
Homepage = "https://github.com/AlphaWaveSystems/tqai"
Repository = "https://github.com/AlphaWaveSystems/tqai"
Issues = "https://github.com/AlphaWaveSystems/tqai/issues"
Changelog = "https://github.com/AlphaWaveSystems/tqai/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/tqai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]
markers = [
    "cuda: requires CUDA GPU",
    "mlx: requires MLX (Apple Silicon)",
    "slow: slow tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/tqai/cli.py" = ["E501"]
"tests/test_e2e_*.py" = ["E501"]
"tests/test_convert.py" = ["E501"]
"scripts/*.py" = ["E501", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["tqai"]
