[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmcache-turbo-quant-serde"
version = "0.1.0"
description = "TurboQuant KV-cache compression plugin for LMCache"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["lmcache", "kv-cache", "quantization", "llm", "inference"]
dependencies = [
    "tqai>=0.6.0",
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
lmcache = ["lmcache>=0.3"]
dev = ["pytest>=7", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
